@@ -151,7 +151,7 @@ namespace Orthanc
 
     void Store(DcmInputStream& is, 
                DicomUserConnection& connection,
-               uint16_t moveMessageID);
+               uint16_t moveOriginatorID);
   };
 
 
@@ -256,7 +256,7 @@ namespace Orthanc
 
   void DicomUserConnection::PImpl::Store(DcmInputStream& is, 
                                          DicomUserConnection& connection,
-                                         uint16_t moveMessageID)
+                                         uint16_t moveOriginatorID)
   {
     CheckIsOpen();
 
@@ -342,9 +342,9 @@ namespace Orthanc
             connection.GetLocalApplicationEntityTitle().c_str(), DIC_AE_LEN);
     request.opts = O_STORE_MOVEORIGINATORAETITLE;
 
-    if (moveMessageID != 0)
+    if (moveOriginatorID != 0)
     {
-      request.MoveOriginatorID = moveMessageID;  // The type DIC_US is an alias for uint16_t
+      request.MoveOriginatorID = moveOriginatorID;  // The type DIC_US is an alias for uint16_t
       request.opts |= O_STORE_MOVEORIGINATORID;
     }
 
@@ -939,7 +939,7 @@ namespace Orthanc
 
   void DicomUserConnection::Store(const char* buffer, 
                                   size_t size,
-                                  uint16_t moveMessageID)
+                                  uint16_t moveOriginatorID)
   {
     // Prepare an input stream for the memory buffer
     DcmInputBufferStream is;
@@ -947,24 +947,24 @@ namespace Orthanc
       is.setBuffer(buffer, size);
     is.setEos();
       
-    pimpl_->Store(is, *this, moveMessageID);
+    pimpl_->Store(is, *this, moveOriginatorID);
   }
 
   void DicomUserConnection::Store(const std::string& buffer,
-                                  uint16_t moveMessageID)
+                                  uint16_t moveOriginatorID)
   {
     if (buffer.size() > 0)
-      Store(reinterpret_cast<const char*>(&buffer[0]), buffer.size(), moveMessageID);
+      Store(reinterpret_cast<const char*>(&buffer[0]), buffer.size(), moveOriginatorID);
     else
-      Store(NULL, 0, moveMessageID);
+      Store(NULL, 0, moveOriginatorID);
   }
 
   void DicomUserConnection::StoreFile(const std::string& path,
-                                      uint16_t moveMessageID)
+                                      uint16_t moveOriginatorID)
   {
     // Prepare an input stream for the file
     DcmInputFileStream is(path.c_str());
-    pimpl_->Store(is, *this, moveMessageID);
+    pimpl_->Store(is, *this, moveOriginatorID);
   }
 
   bool DicomUserConnection::Echo()
